add a symlink to ../data/ in epio.ini

--- a/epio.ini
+++ b/epio.ini
@@ -12,6 +12,7 @@ requirements = requirements.txt
 
 # Serve the static directory directly as /static
 /static = static
+/data = ../data
 
 
 [services]
