fix data symlink

--- a/epio.ini
+++ b/epio.ini
@@ -12,7 +12,7 @@ requirements = requirements.txt
 
 # Serve the static directory directly as /static
 /static = static
-/data = ../data
+/static/data = ../data/
 
 
 [services]
