--- a/epio.ini
+++ b/epio.ini
@@ -37,7 +37,6 @@ directory_name = mibooklist
 # IN_PRODUCTION = true
 
 [symlinks]
-/static/data = ../data/
 # Any symlinks you'd like to add. As an example, link 'config.py' to 'configs/epio.py'
 # config.py = configs/epio.py
 
@@ -49,6 +48,7 @@ base = .
 [static]
 # # Serve the admin media
 #/media = ../shortcuts/django-admin-media/
+/data = ../data/
 [env]
 # # Use a different settings module for ep.io (i.e. with DEBUG=False)
 DJANGO_SETTINGS_MODULE = production_settings
